--- a/po/ca.po
+++ b/po/ca.po
@@ -199,11 +199,19 @@ msgid_plural "%u days"
 msgstr[0] "%u dia"
 msgstr[1] "%u dies"
 
+#. TRANSLATORS: this is shown in the MOTD
 #, c-format
 msgid "%u device has a firmware upgrade available."
 msgid_plural "%u devices have a firmware upgrade available."
 msgstr[0] " %u dispositiu té una actualització de microprogramari disponible."
 msgstr[1] "%u dispositius tenen una actualització de microprogramari disponible."
+
+#. TRANSLATORS: this is shown in the MOTD
+#, c-format
+msgid "%u device is not the best known configuration."
+msgid_plural "%u devices are not the best known configuration."
+msgstr[0] "%u dispositiu no és la millor configuració coneguda."
+msgstr[1] "%u dispositius no són la millor configuració coneguda."
 
 #. TRANSLATORS: duration in minutes
 #, c-format
@@ -236,6 +244,10 @@ msgstr[1] "%u segons"
 #. TRANSLATORS: this is shown as a suffix for obsoleted tests
 msgid "(obsoleted)"
 msgstr "(obsolet)"
+
+#. TRANSLATORS: HSI event title
+msgid "A TPM PCR is now an invalid value"
+msgstr "Un PCR en el TPM ara té un valor no vàlid"
 
 #. TRANSLATORS: the user needs to do something, e.g. remove the device
 msgid "Action Required:"
@@ -272,6 +284,14 @@ msgstr "Accepteu i habiliteu el remot?"
 #, c-format
 msgid "Alias to %s"
 msgstr "Àlies per a «%s»"
+
+#. TRANSLATORS: HSI event title
+msgid "All TPM PCRs are now valid"
+msgstr "Tots els PCR en el TPM ara són vàlids"
+
+#. TRANSLATORS: HSI event title
+msgid "All TPM PCRs are valid"
+msgstr "Tots els PCR en el TPM són vàlids"
 
 #. TRANSLATORS: on some systems certain devices have to have matching
 #. versions,
@@ -541,6 +561,12 @@ msgstr "Separa del mode carregador d'arrencada."
 #. TRANSLATORS: more details about the update link
 msgid "Details"
 msgstr "Detalls"
+
+#. TRANSLATORS: the best known configuration is a set of software that we know
+#. works well
+#. * together. In the OEM and ODM industries it is often called a BKC
+msgid "Deviate from the best known configuration?"
+msgstr "Cal desviar-se de la millor configuració coneguda?"
 
 #. TRANSLATORS: description of device ability
 msgid "Device Flags"
@@ -1622,6 +1648,10 @@ msgstr "S'està reinstal·lant %s amb %s... "
 msgid "Release Branch"
 msgstr "Branca de llançament"
 
+#. TRANSLATORS: the exact component on the server
+msgid "Release ID"
+msgstr "ID de llançament"
+
 #. TRANSLATORS: the server the file is coming from
 #. TRANSLATORS: remote identifier, e.g. lvfs-testing
 msgid "Remote ID"
@@ -1671,8 +1701,13 @@ msgstr "S'està reiniciant el dispositiu..."
 msgid "Return all the hardware IDs for the machine"
 msgstr "Retorna tots els ID del maquinari de la màquina."
 
+#. TRANSLATORS: this is shown in the MOTD
 msgid "Run `fwupdmgr get-upgrades` for more information."
 msgstr "Per a més informació executeu «fwupdmgr get-upgrades»."
+
+#. TRANSLATORS: this is shown in the MOTD
+msgid "Run `fwupdmgr sync-bkc` to complete this action."
+msgstr "Executeu `fwupdmgr sync-bkc` per a completar aquesta acció."
 
 #. TRANSLATORS: command line option
 msgid "Run the plugin composite cleanup routine when using install-blob"
@@ -1727,12 +1762,12 @@ msgid "Scheduling…"
 msgstr "Planificació..."
 
 #. TRANSLATORS: HSI event title
-msgid "Secure Boot enabled"
-msgstr "Està habilitada l'arrencada segura"
+msgid "Secure Boot disabled"
+msgstr "Està inhabilitada l'arrencada segura"
 
 #. TRANSLATORS: HSI event title
-msgid "SecureBoot disabled"
-msgstr "Està inhabilitada l'arrencada segura"
+msgid "Secure Boot enabled"
+msgstr "Està habilitada l'arrencada segura"
 
 #. TRANSLATORS: %s is a link to a website
 #, c-format
@@ -1944,6 +1979,10 @@ msgstr "Canvio la branca des de %s a %s?"
 msgid "Switch the firmware branch on the device"
 msgstr "Canvia la branca de microprogramari en el dispositiu."
 
+#. TRANSLATORS: command description
+msgid "Sync firmware versions to the host best known configuration"
+msgstr "Sincronitza les versions de microprogramari a la millor configuració coneguda de l'amfitrió"
+
 #. TRANSLATORS: Must be plugged in to an outlet
 msgid "System requires external power source"
 msgstr "El sistema requereix una font d'alimentació externa"
@@ -1956,9 +1995,20 @@ msgstr "TEXT"
 msgid "TPM PCR0 reconstruction"
 msgstr "Reconstrucció PCR0 del TPM"
 
+#. TRANSLATORS: Title: PCRs (Platform Configuration Registers) shouldn't be
+#. empty
+msgid "TPM empty PCRs"
+msgstr "Els PCR buits en el TPM"
+
 #. TRANSLATORS: Title: TPM = Trusted Platform Module
 msgid "TPM v2.0"
 msgstr "TPM versió 2.0"
+
+#. TRANSLATORS: release tag set for release, e.g. lenovo-2021q3
+msgid "Tag"
+msgid_plural "Tags"
+msgstr[0] "Etiqueta"
+msgstr[1] "Etiquetes"
 
 #. TRANSLATORS: Suffix: the HSI result
 msgid "Tainted"
@@ -2006,6 +2056,12 @@ msgstr "No hi ha cap fitxer de microprogramari bloquejat."
 #. * the domain administrator
 msgid "There is no approved firmware."
 msgstr "No hi ha cap microprogramari aprovat."
+
+#. TRANSLATORS: %1 is the current device version number, and %2 is the
+#. command name, e.g. `fwupdmgr sync-bkc`
+#, c-format
+msgid "This device will be reverted back to %s when the %s command is performed."
+msgstr "Aquest dispositiu es revertirà a %s quan es realitzi l'ordre %s."
 
 #. TRANSLATORS: unsupported build of the package
 msgid "This package has not been validated, it may not work properly."
@@ -2308,6 +2364,13 @@ msgstr "És possible que el vostre distribuïdor no hagi verificat cap de les ac
 #, c-format
 msgid "Your hardware may be damaged using this firmware, and installing this release may void any warranty with %s."
 msgstr "El vostre maquinari pot danyar-se amb aquest microprogramari, i la instal·lació d'aquesta versió pot anul·lar qualsevol garantia amb %s."
+
+#. TRANSLATORS: BKC is the industry name for the best known configuration and
+#. is a set
+#. * of firmware that works together
+#, c-format
+msgid "Your system is set up to the BKC of %s."
+msgstr "El vostre sistema està establert a la BKC de %s."
 
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "[CHECKSUM]"
