--- a/po/ko.po
+++ b/po/ko.po
@@ -177,6 +177,7 @@ msgid "%u day"
 msgid_plural "%u days"
 msgstr[0] "%u일"
 
+#. TRANSLATORS: this is shown in the MOTD
 #, c-format
 msgid "%u device has a firmware upgrade available."
 msgid_plural "%u devices have a firmware upgrade available."
@@ -1588,6 +1589,7 @@ msgstr "장치 다시 시작하는 중…"
 msgid "Return all the hardware IDs for the machine"
 msgstr "머신의 모든 하드웨어 ID 반환"
 
+#. TRANSLATORS: this is shown in the MOTD
 msgid "Run `fwupdmgr get-upgrades` for more information."
 msgstr "더 많은 정보를 보려면 `fwupdmgr get-upgrades` 명령을 실행하십시오."
 
