--- a/po/pl.po
+++ b/po/pl.po
@@ -202,6 +202,7 @@ msgstr[1] "%u dni"
 msgstr[2] "%u dni"
 msgstr[3] "%u dni"
 
+#. TRANSLATORS: this is shown in the MOTD
 #, c-format
 msgid "%u device has a firmware upgrade available."
 msgid_plural "%u devices have a firmware upgrade available."
@@ -209,6 +210,15 @@ msgstr[0] "%u urządzenie ma dostępną aktualizację oprogramowania sprzętoweg
 msgstr[1] "%u urządzenia mają dostępną aktualizację oprogramowania sprzętowego."
 msgstr[2] "%u urządzeń ma dostępną aktualizację oprogramowania sprzętowego."
 msgstr[3] "%u urządzeń ma dostępną aktualizację oprogramowania sprzętowego."
+
+#. TRANSLATORS: this is shown in the MOTD
+#, c-format
+msgid "%u device is not the best known configuration."
+msgid_plural "%u devices are not the best known configuration."
+msgstr[0] "%u urządzenie nie ma najlepszej znanej konfiguracji."
+msgstr[1] "%u urządzenia nie mają najlepszej znanej konfiguracji."
+msgstr[2] "%u urządzeń nie ma najlepszej znanej konfiguracji."
+msgstr[3] "%u urządzeń nie ma najlepszej znanej konfiguracji."
 
 #. TRANSLATORS: duration in minutes
 #, c-format
@@ -250,6 +260,10 @@ msgstr[3] "%u sekund"
 msgid "(obsoleted)"
 msgstr "(przestarzałe)"
 
+#. TRANSLATORS: HSI event title
+msgid "A TPM PCR is now an invalid value"
+msgstr "PCR TPM ma teraz nieprawidłową wartość"
+
 #. TRANSLATORS: the user needs to do something, e.g. remove the device
 msgid "Action Required:"
 msgstr "Wymagane działanie:"
@@ -285,6 +299,14 @@ msgstr "Wyrazić zgodę i włączyć repozytorium?"
 #, c-format
 msgid "Alias to %s"
 msgstr "Alias do „%s”"
+
+#. TRANSLATORS: HSI event title
+msgid "All TPM PCRs are now valid"
+msgstr "Wszystkie PCR TPM są teraz prawidłowe"
+
+#. TRANSLATORS: HSI event title
+msgid "All TPM PCRs are valid"
+msgstr "Wszystkie PCR TPM są prawidłowe"
 
 #. TRANSLATORS: on some systems certain devices have to have matching
 #. versions,
@@ -556,6 +578,12 @@ msgstr "Odłącza do trybu programu startowego"
 #. TRANSLATORS: more details about the update link
 msgid "Details"
 msgstr "Informacje"
+
+#. TRANSLATORS: the best known configuration is a set of software that we know
+#. works well
+#. * together. In the OEM and ODM industries it is often called a BKC
+msgid "Deviate from the best known configuration?"
+msgstr "Odejść od najlepszej znanej konfiguracji?"
 
 #. TRANSLATORS: description of device ability
 msgid "Device Flags"
@@ -1643,6 +1671,10 @@ msgstr "Ponowne instalowanie %s za pomocą %s… "
 msgid "Release Branch"
 msgstr "Gałąź wydania"
 
+#. TRANSLATORS: the exact component on the server
+msgid "Release ID"
+msgstr "Identyfikator wydania"
+
 #. TRANSLATORS: the server the file is coming from
 #. TRANSLATORS: remote identifier, e.g. lvfs-testing
 msgid "Remote ID"
@@ -1692,8 +1724,13 @@ msgstr "Ponowne uruchamianie urządzenia…"
 msgid "Return all the hardware IDs for the machine"
 msgstr "Zwraca wszystkie identyfikatory sprzętu dla komputera"
 
+#. TRANSLATORS: this is shown in the MOTD
 msgid "Run `fwupdmgr get-upgrades` for more information."
 msgstr "Polecenie „fwupdmgr get-upgrades” wyświetli więcej informacji."
+
+#. TRANSLATORS: this is shown in the MOTD
+msgid "Run `fwupdmgr sync-bkc` to complete this action."
+msgstr "Polecenie „fwupdmgr sync-bkc” dokończy to działanie."
 
 #. TRANSLATORS: command line option
 msgid "Run the plugin composite cleanup routine when using install-blob"
@@ -1748,12 +1785,12 @@ msgid "Scheduling…"
 msgstr "Planowanie…"
 
 #. TRANSLATORS: HSI event title
-msgid "Secure Boot enabled"
-msgstr "Włączono SecureBoot"
+msgid "Secure Boot disabled"
+msgstr "Wyłączono Secure Boot"
 
 #. TRANSLATORS: HSI event title
-msgid "SecureBoot disabled"
-msgstr "Wyłączono SecureBoot"
+msgid "Secure Boot enabled"
+msgstr "Włączono Secure Boot"
 
 #. TRANSLATORS: %s is a link to a website
 #, c-format
@@ -1967,6 +2004,10 @@ msgstr "Przełączyć gałąź z %s na %s?"
 msgid "Switch the firmware branch on the device"
 msgstr "Przełącza gałąź oprogramowania sprzętowego na urządzeniu"
 
+#. TRANSLATORS: command description
+msgid "Sync firmware versions to the host best known configuration"
+msgstr "Synchronizuje wersje oprogramowania sprzętowego do najlepszej znanej konfiguracji komputera"
+
 #. TRANSLATORS: Must be plugged in to an outlet
 msgid "System requires external power source"
 msgstr "Komputer wymaga zewnętrznego źródła zasilania"
@@ -1979,9 +2020,22 @@ msgstr "TEKST"
 msgid "TPM PCR0 reconstruction"
 msgstr "Rekonstrukcja PCR0 TPM"
 
+#. TRANSLATORS: Title: PCRs (Platform Configuration Registers) shouldn't be
+#. empty
+msgid "TPM empty PCRs"
+msgstr "Puste PCR TPM"
+
 #. TRANSLATORS: Title: TPM = Trusted Platform Module
 msgid "TPM v2.0"
 msgstr "TPM v2.0"
+
+#. TRANSLATORS: release tag set for release, e.g. lenovo-2021q3
+msgid "Tag"
+msgid_plural "Tags"
+msgstr[0] "Etykieta"
+msgstr[1] "Etykiety"
+msgstr[2] "Etykiety"
+msgstr[3] "Etykiety"
 
 #. TRANSLATORS: Suffix: the HSI result
 msgid "Tainted"
@@ -2029,6 +2083,12 @@ msgstr "Nie ma zablokowanych plików oprogramowania sprzętowego"
 #. * the domain administrator
 msgid "There is no approved firmware."
 msgstr "Nie ma zatwierdzonego oprogramowania sprzętowego."
+
+#. TRANSLATORS: %1 is the current device version number, and %2 is the
+#. command name, e.g. `fwupdmgr sync-bkc`
+#, c-format
+msgid "This device will be reverted back to %s when the %s command is performed."
+msgstr "To urządzenie zostanie przywrócone do wersji %s po wykonaniu polecenia %s."
 
 #. TRANSLATORS: unsupported build of the package
 msgid "This package has not been validated, it may not work properly."
@@ -2331,6 +2391,13 @@ msgstr "Używana dystrybucja mogła nie sprawdzić zgodności aktualizacji oprog
 #, c-format
 msgid "Your hardware may be damaged using this firmware, and installing this release may void any warranty with %s."
 msgstr "Sprzęt może zostać uszkodzony przez użycie tego oprogramowania sprzętowego, a zainstalowanie tego wydania może spowodować utratę gwarancji od firmy %s."
+
+#. TRANSLATORS: BKC is the industry name for the best known configuration and
+#. is a set
+#. * of firmware that works together
+#, c-format
+msgid "Your system is set up to the BKC of %s."
+msgstr "Komputer jest skonfigurowany według BKC %s."
 
 #. TRANSLATORS: command argument: uppercase, spaces->dashes
 msgid "[CHECKSUM]"
