--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-fwupd (1.7.1-1) UNRELEASED; urgency=medium
+fwupd (1.7.1-1) unstable; urgency=medium
 
   * New upstream version (1.7.1)
   * Update debian/control and debian/copyright for changes upstream
   * Drop all patches, upstream
+  * Packaging changes for the split into fwupd/fwupd-efi.
 
- -- Mario Limonciello <superm1@gmail.com>  Mon, 25 Oct 2021 10:58:15 -0500
+ -- Mario Limonciello <superm1@gmail.com>  Tue, 28 Dec 2021 21:03:39 -0600
 
 fwupd (1.5.7-5) unstable; urgency=medium
 
